# docdistance-estimator

./: .gitignore  Makefile  README.md  pyproject.toml
.claude/: JOURNAL.md
.github/workflows/: ci.yml
data/interim/: 01-statements.parquet  README.md  article.md  exec-summary-1.md  exec-summary-2.md
data/processed/: README.md
docs/: acc-crit-init-model-resolution.md  api-reference.md  aws-deployment-reference.md  cli-reference.md  example-map-interpretations.md  wmd-docdistance-solution-sota.md  wmd-wrt-source-docdistance-solution-sota.md  wmd-wrt-source-docdistance-solution.md
docs/acceptance-criteria/: acc-crit-init-model-resolution.md  acc-crit-structure-diff.md  acc-crit-transport-map.md
docs/dataset/: dataset-generation-recipe.md
docs/experiments/: wmd-docdistance-experiments.md  wmd-structure-distance-experiments.md
docs/solution/: wmd-docdistance-solution-sota.md  wmd-source-conditioned-docdistance-solution-sota.md  wmd-structure-distance-sota.md
logs/: README.md
notebooks/: 01-kj-document-segmentation.ipynb  03-kj-mmbert-throughput-saturation.ipynb  04-kj-wmd-document-distance.ipynb  05-kj-library-validation.ipynb  05-kj-source-conditioned-distance.ipynb  09-kj-docdistance-api-e2e.ipynb  10-kj-encoder-length-bucketing.ipynb  11-kj-structure-fixture.ipynb  12-kj-structure-distance-e2e.ipynb  13-kj-structure-diff-library-e2e.ipynb
notebooks/education/: 01-kj-wmd-smd-explainer.ipynb
notebooks/experiments/: E01-kj-wmd-contrast-hypotheses.ipynb  E02-kj-source-conditioned-grounding.ipynb  E03-kj-source-conditioned-improvements.ipynb  E04-kj-source-conditioned-performance.ipynb  E05-kj-source-conditioned-cpu-speed.ipynb  E06-kj-trained-scorers-cpu.ipynb  E07-kj-structure-distance.ipynb  E08-kj-structure-distance-metric.ipynb  E09-kj-anisotropy-cmr.ipynb  E10-kj-structure-sensitive-distance.ipynb  E11-kj-structure-sota-decision.ipynb
notebooks/model-quantization/: Q01-kj-mmbert-quantization.ipynb  Q02-kj-deberta-int8-smoothquant.ipynb
references/papers/: [paper digest] All-but-the-Top: Simple and Effective Postprocessing for Word Representations.md  [paper digest] Differentiable Divergences Between Time Series.md  [paper digest] From Word Embeddings To Document Distances.md  [paper digest] Fused Gromov-Wasserstein Distance for Structured Objects.md  [paper digest] Kendall Tau Sequence Distance - Extending Kendall Tau from Ranks to Sequences.md  [paper digest] Moving Other Way - Exploring Word Mover Distance Extensions.md  [paper digest] Order Constraints in Optimal Transport.md  (+4 more)
reports/: 02-mmbert-bestconfig.json  02-mmbert-quantization-metrics.json  03-mmbert-throughput-saturation.json  E04-source-conditioned-performance-metrics.json  E07-structure-distance-metrics.json  E08-structure-distance-metrics.json  E09-anisotropy-cmr-metrics.json  E10-structure-sensitive-metrics.json  E11-structure-sota-decision.json  Q02-mdeberta-quantization-metrics.json  encoder-length-bucketing.json
tests/: test_bootstrap.py  test_cli.py  test_distance.py  test_e2e.py  test_pipeline.py  test_settings.py  test_structure.py
(+46 files in other folders)
