[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docdistance"
version = "1.1.1"
description = "Project that uses theory of From Word Embeddings To Document Distances / Optimal Transport to give meaningful distance from one document to another, useful if building agentic projects that convert or extract information from one document to another using frontier models but without the ability to calculate KL divergence from logits"
authors = [
    { name = "Stellars Henson \u003ckonrad.jelen+github@gmail.com\u003e" },
]
license = "MIT"
readme = "README.md"
requires-python = "~=3.13.0"
keywords = [
    "optimal-transport",
    "word-movers-distance",
    "statement-movers-distance",
    "document-similarity",
    "document-distance",
    "embeddings",
    "mmbert",
    "nlp",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "loguru",
    "tqdm",
    "typer",
    "rich",
    "python-dotenv",
    "numpy",
    "pot",
    "transformers",
    "wtpsplit",
    "openvino",
    "torch",
]

[project.urls]
Homepage = "https://github.com/stellarshenson/docdistance"
Repository = "https://github.com/stellarshenson/docdistance"
Issues = "https://github.com/stellarshenson/docdistance/issues"

[project.scripts]
docdistance = "docdistance.cli:app"

[project.optional-dependencies]
dev = [
    "build",
    "ipykernel",
    "ipython",
    "nbdime",
    "pip",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "matplotlib",
    "seaborn",
]
# GPU support - the torch backend on CUDA; accelerate is the sentinel the --gpu flag checks for.
# A CUDA-capable torch wheel (cu12x/cu13x) must already be present; pip cannot select it via an extra.
gpu = [
    "accelerate",
]
# S3 model provisioning - `docdistance init --source s3://...` pulls model IRs via botocore directly
# (no boto3); only needed when resolving models from an S3 bucket, not for HuggingFace / local sources.
s3 = [
    "botocore",
]
# Quantization toolchain - OpenVINO/NNCF SmoothQuant for the INT8 model-quantization notebooks
# (Q01 mmBERT, Q02 mDeBERTa). optimum-intel pins transformers to the 5.0.x line.
quant = [
    "optimum-intel[openvino]",
    "nncf",
    "datasets",
]
all = [
    "docdistance[dev,gpu,quant,s3]",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["docdistance*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 99
src = ["src/docdistance"]
include = ["pyproject.toml", "src/docdistance/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["docdistance"]
force-sort-within-sections = true
